--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./scripts.js" defer></script>
 </head>
 <body>
-    <div class="board">
+    <div class="board circle">
         <div class="cell x" data-cell></div>
         <div class="cell circle" data-cell></div>
         <div class="cell" data-cell></div>
@@ -22,8 +22,8 @@
     </div>
     
     <div class="winning-message" data-winning-message>
-        <p> X Venceu</p>
-        <button>Reiniciar</button>
+        <p class="winning-message-text"> X Venceu</p>
+        <button class="winning-message-button">Reiniciar</button>
     </div>
 
 </body>
