--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="./scripts.js" defer></script>
 </head>
 <body>
-    <div class="board circle">
-        <div class="cell x" data-cell></div>
-        <div class="cell circle" data-cell></div>
+    <div class="board" data-board>
+        <div class="cell" data-cell></div>
+        <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
@@ -22,7 +22,7 @@
     </div>
     
     <div class="winning-message" data-winning-message>
-        <p class="winning-message-text"> X Venceu</p>
+        <p class="winning-message-text" data-winning-message-text> X Venceu</p>
         <button class="winning-message-button">Reiniciar</button>
     </div>
 
